--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
-    "materialize-css": "^0.100.2",
-    "react": "^16.0.0-alpha.13",
-    "react-dom": "^16.0.0-alpha.13",
+    "materialize-css": "^1.0.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
