--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - npm install
   - npm run build
 script:
-  - nohup npm run start
+  - nohup npm run start &
   - sleep 3
   - npm run test
   
