--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "8"
+  - "10"
 dist: trusty
 services:
   - mongodb
@@ -17,5 +17,5 @@ install:
 script:
   - nohup npm run start &
   - sleep 3
-  - CI=true npm run test
+  - npm run test
   
